@@ -9,8 +9,13 @@
 	  mod makefiles are generated by the content/makefile_builder.sh script;
 	  since this script is probably non-portable, the generated output makefiles
 	  have been included in the SVN dir for the time being.
+	* Makefile.am: Do not link with libmt32emu.la if it is not built.
 	* configure.ac: Cleaning up tests for libogg, libvorbis, libvorbisfile,
-	  libglade and libgnomeui.
+	  libglade and libgnomeui. Changed AC_ARG_* to use AS_HELP_STRING. Fixed the
+	  default case for --enable-long-long-warnings. Static builds in Mac OS X
+	  now work by passing the following arguments to ./configure:
+	    --enable-static-libraries
+	    --with-macosx-static-lib-path=path/to/static/libs
 
 2010-03-18	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* mapedit/npcedit.cc: Fixed another instance of assuming longs are 32-bit.
